crates/aiken-lang/src/tests/snapshots/aiken_lang__tests__parser__pipeline.snap
---
source: crates/aiken-lang/src/tests/parser.rs
description: "\n        pub fn thing(thing a: Int) {\n          a + 2\n          |> add_one\n          |> add_one\n        }\n    "
info: pipeline
---
Module {
    name: "",
    docs: [],
    type_info: (),
    definitions: [
        Fn(
            Function {
                arguments: [
                    Arg {
                        arg_name: Named {
                            name: "a",
                            label: "thing",
                            location: 13..20,
                            is_validator_param: false,
                        },
                        location: 13..25,
                        annotation: Some(
                            Constructor {
                                location: 22..25,
                                module: None,
                                name: "Int",
                                arguments: [],
                            },
                        ),
                        tipo: (),
                    },
                ],
                body: PipeLine {
                    expressions: [
                        BinOp {
                            location: 31..36,
                            name: AddInt,
                            left: Var {
                                location: 31..32,
                                name: "a",
                            },
                            right: Int {
                                location: 35..36,
                                value: "2",
                                base: Decimal {
                                    numeric_underscore: false,
                                },
                            },
                        },
                        Var {
                            location: 42..49,
                            name: "add_one",
                        },
                        Var {
                            location: 55..62,
                            name: "add_one",
                        },
                    ],
                    one_liner: false,
                },
                doc: None,
                location: 0..26,
                name: "thing",
                public: true,
                return_annotation: None,
                return_type: (),
                end_position: 63,
                can_error: true,
            },
        ),
    ],
    kind: Validator,
}
