crates/aiken-lang/src/tests/snapshots/aiken_lang__tests__parser__record_create_labeled.snap
---
source: crates/aiken-lang/src/tests/parser.rs
description: "\n        fn create() {\n          User { name: \"Aiken\", age, thing: 2 }\n        }\n    "
info: record_create_labeled
---
Module {
    name: "",
    docs: [],
    type_info: (),
    definitions: [
        Fn(
            Function {
                arguments: [],
                body: Call {
                    arguments: [
                        CallArg {
                            label: Some(
                                "name",
                            ),
                            location: 23..36,
                            value: ByteArray {
                                location: 29..36,
                                bytes: [
                                    65,
                                    105,
                                    107,
                                    101,
                                    110,
                                ],
                                preferred_format: Utf8String,
                            },
                        },
                        CallArg {
                            label: Some(
                                "age",
                            ),
                            location: 38..41,
                            value: Var {
                                location: 38..41,
                                name: "age",
                            },
                        },
                        CallArg {
                            label: Some(
                                "thing",
                            ),
                            location: 43..51,
                            value: Int {
                                location: 50..51,
                                value: "2",
                                base: Decimal {
                                    numeric_underscore: false,
                                },
                            },
                        },
                    ],
                    fun: Var {
                        location: 16..20,
                        name: "User",
                    },
                    location: 16..53,
                },
                doc: None,
                location: 0..11,
                name: "create",
                public: false,
                return_annotation: None,
                return_type: (),
                end_position: 54,
                can_error: true,
            },
        ),
    ],
    kind: Validator,
}
