crates/aiken-lang/src/tests/snapshots/aiken_lang__tests__parser__snapshot_windows_newline.snap
---
source: crates/aiken-lang/src/tests/parser.rs
description: "use aiken/list\r\n"
info: snapshot_windows_newline
---
Module {
    name: "",
    docs: [],
    type_info: (),
    definitions: [
        Use(
            Use {
                as_name: None,
                location: 0..14,
                module: [
                    "aiken",
                    "list",
                ],
                package: (),
                unqualified: [],
            },
        ),
    ],
    kind: Validator,
}
