crates/aiken-lang/src/tests/snapshots/aiken_lang__tests__parser__tuple_type_alias.snap
---
source: crates/aiken-lang/src/tests/parser.rs
description: "\n          type RoyaltyToken = (PolicyId, AssetName)\n    "
info: tuple_type_alias
---
Module {
    name: "",
    docs: [],
    type_info: (),
    definitions: [
        TypeAlias(
            TypeAlias {
                alias: "RoyaltyToken",
                annotation: Tuple {
                    location: 20..41,
                    elems: [
                        Constructor {
                            location: 21..29,
                            module: None,
                            name: "PolicyId",
                            arguments: [],
                        },
                        Constructor {
                            location: 31..40,
                            module: None,
                            name: "AssetName",
                            arguments: [],
                        },
                    ],
                },
                doc: None,
                location: 0..41,
                parameters: [],
                public: false,
                tipo: (),
            },
        ),
    ],
    kind: Validator,
}
